# PPInsight

./: .gitignore  LICENSE  PPInsight Technology Review.pptx  README.md  environment.yml  protein  pyproject.toml  technology_review.md  use_cases.md  user_case_profiles  user_case_profiles.md
.github/workflows/: testsuite.yml
Code/: FASTA_downloader.ipynb  UniprotSavingFASTA_PDB-checkpoint.ipynb  UniprotSavingFASTA_PDB.ipynb  Uniprot_Biopython-checkpoint.ipynb  pdb_to_haddock.ipynb  pdb_to_lightdock.ipynb
Code/Uniprot_Play /: Uniport_downloader.ipynb
Code/cache/: seqids.json
docs/: component_spec.md  functional_spec.md  run_haddock_hyak.md  use_cases.md
examples/dummy_scores/: model_1.csv  model_2.csv  model_3.csv  visualizer_example.ipynb
examples/haddock3/: README.md
examples/haddock3/run1-test/: log
examples/lightdock/: README.md
examples/lightdock/simulation/: lightdock.info
examples/rosetta/: README.md
scripts/: hyak_run_haddock.sh
src/ppinsight/: UniprotSavingFASTA_PDB-checkpoint.ipynb  Uniprot_Biopython.ipynb  __init__.py  _prepare_structure.py  _rosetta_dock.py  _rosetta_prepare_structure.py  pdb_to_haddock.py  pdb_to_lightdock.py  protein_fetch.py  rosetta_checkpoint_pipeline.py  rosetta_pipeline.py  rosetta_run_pipeline.py  visualizer.ipynb  visualizer.py
src/ppinsight.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ppinsight/rosetta/: __init__.py  analyze.py  checkpoint_pipline.py  cli.py  dock.py  pipeline.py  prepare_structure.py
src/ppinsight/rosetta_docking/: __init__.py  analyze.py  run_pipeline.py
tests/: conftest.py  test_entropy.py  test_pdb_to_haddock.py  test_pdb_to_lightdock.py  test_protein_fetch.py  test_protein_fetch_1.py  test_ritahw3.py  test_rosetta_docking.py  test_visualizer.py
(+196 files in other folders)
